@@ -1,0 +1,50 @@
+<?xml version="1.0"?>
+<!--
+  Licensed to the Apache Software Foundation (ASF) under one or more
+  contributor license agreements.  See the NOTICE file distributed with
+  this work for additional information regarding copyright ownership.
+  The ASF licenses this file to You under the Apache License, Version 2.0
+  (the "License"); you may not use this file except in compliance with
+  the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
+<project>
+
+  <path id="test">
+    <pathelement path="${java.class.path}" />
+    <pathelement location="../../../../../../build/testcases" />
+  </path>
+
+  <target name="testNoTeardown">
+    <junit haltonerror="false" errorproperty="error" fork="true" timeout="1000">
+      <formatter type="plain" usefile="false"/>
+      <batchtest>
+        <fileset dir="../../../../../../build/testcases">
+          <include name="org/example/junit/Timeout*"/>
+        </fileset>
+      </batchtest>
+      <classpath refid="test"/>
+    </junit>
+  </target>
+
+  <target name="testTeardown">
+    <junit haltonerror="false" errorproperty="error" fork="true" timeout="1000">
+      <formatter type="plain" usefile="false"/>
+      <formatter classname="org.apache.tools.ant.taskdefs.optional.junit.TearDownOnVmCrash"
+                 usefile="false"/>
+      <batchtest>
+        <fileset dir="../../../../../../build/testcases">
+          <include name="org/example/junit/Timeout*"/>
+        </fileset>
+      </batchtest>
+      <classpath refid="test"/>
+    </junit>
+  </target>
+</project>
